# one-project-backend

./: .env.example  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  compose.yml  test.bat  test.sh
.github/workflows/: rust.yml
dev_infra/: .gitignore  README.md  create-db.sql  docker-compose.yml
docs/: README.md  architecture.md  current-state-and-gaps.md  folder-structure.md  product-capability-guide.md
migration/src/: lib.rs  m20220101_000001_create_user_table.rs  m20240809_114718_sessions.rs  m20241101_172249_user_login.rs  m20241103_032650_create_jobs.rs  m20241129_115216_add_queue_jobs.rs  m20250420_151021_create_organisation.rs  m20250420_151106_create_org_to_user_map.rs
src/: bootstrap.rs  main.rs  test_utils.rs
src/base/: e2e_test.rs  mod.rs
src/capabilities/: crypto.rs  database.rs  logger.rs  mailer.rs  mod.rs
src/capabilities/background/: job_handler.rs  jobs.rs  mod.rs  orchestrator.rs  queue_manager.rs  queues.rs  workers.rs
src/capabilities/background/entities/: jobs.rs
src/capabilities/iam/: auth.rs  constants.rs  iam_utils.rs  middleware.rs  mod.rs  objects.rs  service.rs  session.rs  user_login.rs  users.rs
src/capabilities/iam/controllers/: authentication.rs  e2e_test.rs  mod.rs  organisations.rs  users.rs
src/capabilities/iam/entities/: mod.rs  (+5 more)
src/capabilities/lib/: common_error.rs  common_response.rs  mod.rs  service_trait.rs
src/capabilities/notifications/: email_handler.rs  mod.rs  objects.rs  service.rs
static/: humans.txt
static/.well-known/: security.txt
templates/: magic_link.hbs
(+12 files in other folders)
