[package]
name = "one-project-backend"
version = "0.1.0"
edition = "2021"
authors = ["Shivam Mathur <shivam@kodingkorp.com>"]
description = "Proprietary webserver for KodingKorp"
rust-version = "1.89.0"
readme = "README.md"

[dependencies]
chrono = "0.4.38"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.0"
sea-orm = { version = "1.0.0", features = ["sqlx-postgres", "runtime-tokio-native-tls", "with-uuid"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["v4"] }
migration = { path = "./migration" }
validator = { version = "0.18.1", features = ["derive", "validator_derive"] }
poem = { version = "3.0.4", features = ["redis-session", "test","static-files"]}
poem-openapi = { version = "5.0.3", features = ["swagger-ui", "email", "uuid"] }
bcrypt = "0.15.1"
rand = "0.8.5"
redis = { version = "0.27.5", features = ["aio", "tokio-comp", "connection-manager"] }
anyhow = "1.0.86"
thiserror = "1.0.63"
lettre = { version = "0.11.7", features = ["tokio1", "tokio1-native-tls", "tracing"] }
handlebars = "6.0.0"
futures-util = "0.3.31"
regex = "1.11.1"
async-trait = "0.1.83"
cron = "0.12.1"
tracing-test = "0.2.5"
ammonia = "4.0.0"
[profile.release]
strip = true
